<resources>
    <string name="app_name">FeedBackApp</string>
    <string name="rain_fall">It rained today, but we tried our best.</string>
    <string name="effort">Are you happy with our effort?</string>
    <string name="service">Thanks a lot for the awesome service!</string>
    <string name="thanks">Thanks you for the awesome</string>
    <string name="feedback">feedback, it will be really helpful for</string>
    <string name="us">us to provide you a better service!</string>
</resources>
