<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedbackMainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@color/feedBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="157dp"
            android:layout_height="146dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="22dp"
            android:layout_marginTop="28dp"
            android:scaleType="centerCrop"
            android:src="@drawable/feedbacklogo" />

        <TextView
            android:id="@+id/textView_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="53dp"
            android:layout_marginBottom="74dp"
            android:fontFamily="sans-serif-condensed"
            android:text="FEEDBACK"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/textView_ourbest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView_feedback"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="57dp"
            android:text="@string/rain_fall"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView_effort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="54dp"
            android:layout_marginBottom="39dp"
            android:text="@string/effort"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/first_name_text_layout"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"

        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/first_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/service"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"

            android:textColorHint="@color/colorPrimary"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="10dp"
        android:background="@color/feedBack"
        android:text="SUBMIT"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name_text_layout" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="113dp"
        android:layout_marginEnd="112dp"
        android:src="@drawable/feedbackfooter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_submit" />
</android.support.constraint.ConstraintLayout>

